crates/css_ast/tests/snapshots/postcss_snapshots__postcss_atrule_decls.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
StyleSheet(
  rules: [
    PageRule(
      name: AtKeyword(Cursor(
        kind: "AtKeyword",
        offset: SourceOffset(0),
        len: 5,
      )),
      prelude: Some(PageSelectorList([
        (PageSelector(
          page_type: None,
          pseudos: [
            Left(Colon(Cursor(
              kind: "Colon",
              offset: SourceOffset(6),
              len: 1,
            )), Ident(Cursor(
              kind: "Ident",
              offset: SourceOffset(7),
              len: 4,
            ))),
          ],
        ), None),
      ])),
      block: PageRuleBlock(Block(
        open_curly: LeftCurly(Cursor(
          kind: "LeftCurly",
          offset: SourceOffset(12),
          len: 1,
        )),
        declarations: [
          Declaration(
            name: Ident(Cursor(
              kind: "Ident",
              offset: SourceOffset(18),
              len: 10,
            )),
            colon: Colon(Cursor(
              kind: "Colon",
              offset: SourceOffset(28),
              len: 1,
            )),
            value: BackgroundStyleValue([
              (Literal(BgLayer(
                image: None,
                position: None,
                repeat: None,
                attachment: None,
                origin: None,
                clip: None,
                color: Some(Named(Black(Ident(Cursor(
                  kind: "Ident",
                  offset: SourceOffset(30),
                  len: 5,
                ))))),
              )), None),
            ]),
            important: None,
            semicolon: None,
          ),
        ],
        rules: [],
        close_curly: Some(RightCurly(Cursor(
          kind: "RightCurly",
          offset: SourceOffset(36),
          len: 1,
        ))),
      )),
    ),
    MediaRule(
      name: AtKeyword(Cursor(
        kind: "AtKeyword",
        offset: SourceOffset(39),
        len: 6,
      )),
      prelude: MediaQueryList([
        (MediaQuery(
          precondition: None,
          media_type: None,
          and: None,
          condition: Some(Is(Width(Min(LeftParen(Cursor(
            kind: "LeftParen",
            offset: SourceOffset(45),
            len: 1,
          )), Ident(Cursor(
            kind: "Ident",
            offset: SourceOffset(46),
            len: 9,
          )), Colon(Cursor(
            kind: "Colon",
            offset: SourceOffset(55),
            len: 1,
          )), Zero(Number(Cursor(
            kind: "Number",
            offset: SourceOffset(57),
            len: 1,
          ))), RightParen(Cursor(
            kind: "RightParen",
            offset: SourceOffset(58),
            len: 1,
          )))))),
        ), None),
      ]),
      block: MediaRuleBlock(Block(
        open_curly: LeftCurly(Cursor(
          kind: "LeftCurly",
          offset: SourceOffset(60),
          len: 1,
        )),
        declarations: [
          Declaration(
            name: Ident(Cursor(
              kind: "Ident",
              offset: SourceOffset(66),
              len: 10,
            )),
            colon: Colon(Cursor(
              kind: "Colon",
              offset: SourceOffset(76),
              len: 1,
            )),
            value: BackgroundStyleValue([
              (Literal(BgLayer(
                image: None,
                position: None,
                repeat: None,
                attachment: None,
                origin: None,
                clip: None,
                color: Some(Named(White(Ident(Cursor(
                  kind: "Ident",
                  offset: SourceOffset(78),
                  len: 5,
                ))))),
              )), None),
            ]),
            important: None,
            semicolon: None,
          ),
        ],
        rules: [],
        close_curly: Some(RightCurly(Cursor(
          kind: "RightCurly",
          offset: SourceOffset(84),
          len: 1,
        ))),
      )),
    ),
    FontFaceRule(
      name: AtKeyword(Cursor(
        kind: "AtKeyword",
        offset: SourceOffset(87),
        len: 10,
      )),
      block: FontFaceRuleBlock(DeclarationList(
        open_curly: LeftCurly(Cursor(
          kind: "LeftCurly",
          offset: SourceOffset(98),
          len: 1,
        )),
        declarations: [
          Declaration(
            name: Ident(Cursor(
              kind: "Ident",
              offset: SourceOffset(104),
              len: 11,
            )),
            colon: Colon(Cursor(
              kind: "Colon",
              offset: SourceOffset(115),
              len: 1,
            )),
            value: Unknown(Unknown(ComponentValues(
              values: [
                Whitespace(Cursor(
                  kind: "Whitespace",
                  offset: SourceOffset(116),
                  len: 1,
                )),
                String(Cursor(
                  kind: "String",
                  offset: SourceOffset(117),
                  len: 10,
                )),
              ],
            ))),
            important: None,
            semicolon: Some(Semicolon(Cursor(
              kind: "Semicolon",
              offset: SourceOffset(127),
              len: 1,
            ))),
          ),
        ],
        close_curly: Some(RightCurly(Cursor(
          kind: "RightCurly",
          offset: SourceOffset(129),
          len: 1,
        ))),
      )),
    ),
    UnknownAtRule(
      name: AtKeyword(Cursor(
        kind: "AtKeyword",
        offset: SourceOffset(132),
        len: 9,
      )),
      prelude: ComponentValues(
        values: [
          Whitespace(Cursor(
            kind: "Whitespace",
            offset: SourceOffset(141),
            len: 1,
          )),
          SimpleBlock(
            open: PairWiseStart(Cursor(
              kind: "LeftCurly",
              offset: SourceOffset(142),
              len: 1,
            )),
            values: ComponentValues(
              values: [
                Whitespace(Cursor(
                  kind: "Whitespace",
                  offset: SourceOffset(143),
                  len: 5,
                )),
                Ident(Cursor(
                  kind: "Ident",
                  offset: SourceOffset(148),
                  len: 5,
                )),
                Colon(Cursor(
                  kind: "Colon",
                  offset: SourceOffset(153),
                  len: 1,
                )),
                Whitespace(Cursor(
                  kind: "Whitespace",
                  offset: SourceOffset(154),
                  len: 1,
                )),
                Dimension(Cursor(
                  kind: "Dimension",
                  offset: SourceOffset(155),
                  len: 5,
                )),
                Semicolon(Cursor(
                  kind: "Semicolon",
                  offset: SourceOffset(160),
                  len: 1,
                )),
              ],
            ),
            close: Some(PairWiseEnd(Cursor(
              kind: "RightCurly",
              offset: SourceOffset(162),
              len: 1,
            ))),
          ),
          Whitespace(Cursor(
            kind: "Whitespace",
            offset: SourceOffset(163),
            len: 2,
          )),
          AtKeyword(Cursor(
            kind: "AtKeyword",
            offset: SourceOffset(165),
            len: 13,
          )),
          Whitespace(Cursor(
            kind: "Whitespace",
            offset: SourceOffset(178),
            len: 1,
          )),
          SimpleBlock(
            open: PairWiseStart(Cursor(
              kind: "LeftCurly",
              offset: SourceOffset(179),
              len: 1,
            )),
            values: ComponentValues(
              values: [
                Whitespace(Cursor(
                  kind: "Whitespace",
                  offset: SourceOffset(180),
                  len: 5,
                )),
                Ident(Cursor(
                  kind: "Ident",
                  offset: SourceOffset(185),
                  len: 5,
                )),
                Colon(Cursor(
                  kind: "Colon",
                  offset: SourceOffset(190),
                  len: 1,
                )),
                Whitespace(Cursor(
                  kind: "Whitespace",
                  offset: SourceOffset(191),
                  len: 1,
                )),
                Dimension(Cursor(
                  kind: "Dimension",
                  offset: SourceOffset(192),
                  len: 5,
                )),
                Semicolon(Cursor(
                  kind: "Semicolon",
                  offset: SourceOffset(197),
                  len: 1,
                )),
              ],
            ),
            close: Some(PairWiseEnd(Cursor(
              kind: "RightCurly",
              offset: SourceOffset(199),
              len: 1,
            ))),
          ),
          Whitespace(Cursor(
            kind: "Whitespace",
            offset: SourceOffset(200),
            len: 1,
          )),
        ],
      ),
      block: ComponentValues(
        values: [],
      ),
    ),
  ],
)
