crates/css_ast/tests/snapshots/postcss_snapshots__postcss_atrule_empty.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
StyleSheet(
  rules: [
    CharsetRule(
      at_keyword: AtKeyword(Cursor(
        kind: "AtKeyword",
        offset: SourceOffset(0),
        len: 8,
      )),
      space: Whitespace(Cursor(
        kind: "Whitespace",
        offset: SourceOffset(8),
        len: 1,
      )),
      string: String(Cursor(
        kind: "String",
        offset: SourceOffset(9),
        len: 7,
      )),
      semicolon: Some(Semicolon(Cursor(
        kind: "Semicolon",
        offset: SourceOffset(16),
        len: 1,
      ))),
    ),
  ],
)
