crates/css_ast/tests/snapshots/postcss_snapshots__postcss_atrule_no_params.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "name": {
        "kind": "AtKeyword",
        "offset": 0,
        "len": 5
      },
      "prelude": null,
      "block": {
        "open_curly": {
          "kind": "LeftCurly",
          "offset": 5,
          "len": 1
        },
        "declarations": [],
        "rules": [],
        "close_curly": {
          "kind": "RightCurly",
          "offset": 7,
          "len": 1
        }
      },
      "semicolon": null
    }
  ]
}
