crates/css_ast/tests/snapshots/postcss_snapshots__postcss_between.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "QualifiedRule",
      "prelude": [
        [
          [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "A": {
                    "kind": "Ident",
                    "offset": 0,
                    "len": 1
                  }
                }
              }
            }
          ],
          null
        ]
      ],
      "block": {
        "open_curly": {
          "kind": "LeftCurly",
          "offset": 6,
          "len": 1
        },
        "declarations": [],
        "rules": [],
        "close_curly": {
          "kind": "RightCurly",
          "offset": 7,
          "len": 1
        }
      }
    }
  ]
}
