crates/css_ast/tests/snapshots/postcss_snapshots__postcss_colon_selector.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "QualifiedRule",
      "prelude": [
        [
          [
            {
              "type": "pseudo-class",
              "value": {
                "fullscreen": [
                  {
                    "kind": "Colon",
                    "offset": 0,
                    "len": 1
                  },
                  {
                    "kind": "Ident",
                    "offset": 1,
                    "len": 10
                  }
                ]
              }
            }
          ],
          null
        ]
      ],
      "block": {
        "open_curly": {
          "kind": "LeftCurly",
          "offset": 12,
          "len": 1
        },
        "declarations": [],
        "rules": [],
        "close_curly": {
          "kind": "RightCurly",
          "offset": 13,
          "len": 1
        }
      }
    }
  ]
}
